--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	background-color: #232323;
+	background-color: white;
 	margin: 0;
 	font-family: "Montserrat", "Avenir";
 }
@@ -10,10 +10,7 @@ body {
 	padding-bottom: 30%;
 	float: left;
 	margin: 1.66%;
-	border-radius: 15%;
-	transition: background 0.6s;
-	-webkit-transition: background 0.6s;
-	-moz-transition: background 0.6s;
+	border-radius: 15%;	
 }
 
 #container {
@@ -42,7 +39,7 @@ h1 {
 }
 
 #stripe {
-	background: white;
+	background: #232323;
 	height: 30px;
 	text-align: center;
 	color: black;
