--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@ body {
 	float: left;
 	margin: 1.66%;
 	border-radius: 15%;	
+	transition: background 0.6s;
+	-webkit-transition: background 0.6s;
+	-moz-transition: background 0.6s;
 }
 
 #container {
